# nightcore

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  nomad.hcl  pyproject.toml
.github/workflows/: build-and-deploy.yml  build-and-push.yml
docker/: docker-entrypoint.sh  healthcheck.sh
migrations/: drop_structre.sql  drop_structure.sql  env.py  structure.sql
migrations/versions/: 03059ad0efa7_add_customcomponent_model.py  06847673f3e4_mon_aug_11_07_53_41_pm_cest_2025.py  10c41d7cd808_sun_sep_21_10_52_27_pm_cest_2025.py  16ce54fc6920_add_voteban_state.py  17a45cbbbb6b_thu_aug_21_10_18_23_pm_cest_2025.py  19555e7360c3_sat_aug_16_06_31_08_pm_cest_2025.py  1d9d1ff2dfef_initial_structure.py  1e91b387214b_add_pg_trgm_extension.py  1f8941859ed8_mon_oct_20_08_34_57_pm_cest_2025.py  1fa913a067e6_change_fractionroleconfig.py  2157f7262dd0_tue_aug_19_09_58_03_pm_cest_2025.py  24780dd63de2_fri_oct_31_11_27_17_pm_cet_2025.py  26db324cb473_mon_oct_20_09_51_16_pm_cest_2025.py  2833f3bd6c93_thu_oct_30_07_29_11_pm_cet_2025.py  294b6bab8716_add_base_temp_battlepass_multiplier.py  2c78daa4fc1a_add_moderationmessage.py  2e7d69ca6c47_thu_oct_30_07_02_08_pm_cet_2025.py  33fa38d3433b_thu_aug_7_06_58_41_pm_cest_2025.py  388dd26ece6a_add_color_compensation.py  3987deacccd3_fri_sep_19_09_34_01_pm_cest_2025.py  3aeae0e45d73_sat_sep_13_05_28_40_pm_cest_2025.py  3e3c7307f707_mon_oct_27_02_53_54_pm_cet_2025.py  420dd27cef77_sat_aug_16_07_46_06_pm_cest_2025.py  443c94bb242a_mon_aug_25_10_19_14_pm_cest_2025.py  46aa1cd9f806_mon_oct_27_02_45_57_pm_cet_2025.py  4b32380ab165_thu_oct_30_07_32_48_pm_cet_2025.py  (+73 more)
src/config/: config.py  env.py
tests/: test_parse_indexes.py
(+573 files in other folders)
